--- a/FORM.html
+++ b/FORM.html
@@ -3,7 +3,9 @@
     <h1 style="text-align:center;">USER FORM</h1>
     <style>
         body{
-            background-color: #11df63fd;
+            border-Style : double;
+            background color: #1ldF63Fd
+            border Color : black;
         }
     </style>
     <BODY>
